# Launcher

./: Applications.xml  CMakeLists.txt  Main.qml  applauncher.cpp  applauncher.h  main.cpp  res.qrc
